# activguard

./: .gitignore  LICENSE  README.md  benchmark_dml.py  eval_combined_layers.py  generate_training_data.py  generate_training_data_v2.py  pipeline.py  pyproject.toml  requirements.txt  run_baselines.py  seed_rag.py  setup_slms.py  train_layer_probe.py  train_probe.py
.activguard/: bandit_results.json  e2e_results_dolphin.json  e2e_results_hf_blind_final.json  e2e_results_hf_stream.json  e2e_results_hf_warmup_fixed.json  e2e_results_hf_wild_final.json  e2e_results_qwen3.json  e2e_results_static.json  e2e_summary_dolphin.json  e2e_summary_hf_blind_final.json  e2e_summary_hf_stream.json  e2e_summary_hf_warmup_fixed.json  e2e_summary_hf_wild_final.json  e2e_summary_qwen3.json  e2e_summary_static.json  embed_cache_dolphin3_8b.npz  embed_cache_nous-hermes2_10_7b.npz  features_b8eae2161a1854fd.npz  layer_sweep_qwen2-5-coder-1-5b-instruct.json
.activguard/chromadb/: chroma.sqlite3
activguard/: __init__.py  cli.py
connectors/: __init__.py  misp_connector.py  nvd_connector.py  osv_connector.py  splunk_connector.py  taxii_connector.py
core/: __init__.py  acp.py  threat_indicator.py
examples/: vulnerable_code.py
experiments/: layer_analysis.py
experiments/results/: layer_auc_results.json
probe/: __init__.py  activation_probe.py  cross_model_eval.py  hf_hidden_probe.py  layer_probe.py  residual_stream_probe.py  sparse_autoencoder.py  streaming_probe.py  universal_streaming_probe.py
probe_autoresearch/: prepare_probe.py  program_probe.md  train_probe_auto.py
proxy/: __init__.py  __main__.py  config.py  server.py  violation_event.py
rag/: __init__.py  antipattern_library.py  auth_extractor.py  cve_pipeline.py  semantic_rag.py  stix_encoder.py
scripts/: benchmark_all.py  build_large_dataset.py  fix_vuln_samples.py  pull_real_data.py  run_e2e_benchmark.py  train_hf_probe.py  train_sae.py
tests/: __init__.py  test_formal_checker.py  test_nvd_connector.py  test_osv_connector.py  test_threat_indicator.py
verifier/: __init__.py  formal_check.py  property_templates.py  stix_to_viper.py
