[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "activguard"
version = "0.1.0"
description = "4-layer vulnerability detection system for LLM-generated code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Bhuvan Reddy", email = "bhuvan@example.com" }
]
keywords = [
    "security",
    "vulnerability-detection",
    "llm",
    "mechanistic-interpretability",
    "formal-verification",
    "threat-intelligence",
    "rag",
    "activation-probes",
    "cve",
    "stix",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "scipy>=1.11.0",
]
rag = [
    "chromadb>=0.4.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "bandit>=1.7.0",
    "dataclasses-json>=0.6.0",
]
all = [
    "activguard[ml,rag,dev]",
]

[project.scripts]
activguard = "activguard.cli:main"

[project.urls]
Homepage = "https://github.com/Tbhuvan/activguard"
Repository = "https://github.com/Tbhuvan/activguard"
"Bug Tracker" = "https://github.com/Tbhuvan/activguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "probe*", "rag*", "verifier*", "connectors*"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type hints)
]
ignore = [
    "ANN101",  # self type annotation
    "ANN102",  # cls type annotation
    "ANN401",  # Any annotation in some utility code
    "E501",    # Line too long (black handles this)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN", "S101"]  # Allow assert and missing annotations in tests.

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=core",
    "--cov=probe",
    "--cov=rag",
    "--cov=verifier",
    "--cov=connectors",
    "--cov-report=term-missing",
    "--cov-fail-under=30",
]
markers = [
    "integration: marks tests as integration tests (require network/external services)",
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.coverage.run]
omit = ["tests/*", "*/migrations/*"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert statements.
